# kanban_fastapi

./: README.md
backend_kanban/: docker-compose.yml  main.py  pyproject.toml
frontend_kanban/: package-lock.json  package.json
frontend_kanban/src/: index.js
frontend_kanban/src/components/: AddColumn.jsx  AddTask.jsx  Board.jsx  Columns.jsx  Header.jsx  Login.jsx  Logout.jsx  Register.jsx  Task.jsx
frontend_kanban/src/css/: index.css
